# vader_sim

./: .gitmodules  README.md
END-EFFECTOR-GAZEBO/: package.xml
END-EFFECTOR-GAZEBO/launch/: gazebo.launch
END-EFFECTOR-GAZEBO/urdf/: END-EFFECTOR-GAZEBO.csv
src/END-EFFECTOR-GAZEBO/: CMakeLists.txt
src/END-EFFECTOR-GAZEBO/launch/: display.launch
src/END-EFFECTOR-GAZEBO/meshes/: blade_moving.STL
src/END-EFFECTOR-GAZEBO/urdf/: END-EFFECTOR-GAZEBO.urdf
src/cutter/urdf/: cutter.csv  cutter.urdf
src/detachable_pepper/: CMakeLists.txt  package.xml
src/detachable_pepper_ign/launch/: gazebo.launch
src/detachable_pepper_ign/worlds/: detachable_joint.sdf  empty.sdf
src/detachable_pepper_plugin_classic/: CMakeLists.txt  package.xml
src/detachable_pepper_plugin_classic/launch/: gazebo.launch
src/detachable_pepper_plugin_classic/src/: JointDeleter.cpp  pepperPoseMaintainer.py
src/detachable_pepper_plugin_classic/worlds/: ex1.world
src/gripper/config/: joint_names_gripper.yaml
src/gripper/meshes/: fing_1.STL
src/gripper/urdf/: gripper.csv  gripper.urdf
src/sim_fake_perception/: CMakeLists.txt  package.xml
src/sim_fake_perception/launch/: fake_coarse.launch  fake_coarse_and_fine.launch  fake_fine.launch
src/sim_fake_perception/src/: fake_coarse_pe_pub.py  fake_fine_pe_pub.py  fake_pose_est_publisher.py
src/sim_pepper/: CMakeLists.txt  package.xml
src/sim_pepper/launch/: gazebo.launch
src/sim_pepper/src/: SimulatedPepper.py
src/sim_pepper/urdf/: pepper.urdf
src/sim_pepper/worlds/: breakable.world  ex1.world  pepper_plant.sdf  (+1 more)
(+55 files in other folders)
